test/spec_vectors/block/fail/module_15.wat
(module (func $type-empty-f32 (result f32) (block)))